Added error stream to shorts controller. Gitignore update and handling network error.

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   youtube_shorts:
     path: '../'
   enchanted_collection: ^1.2.0
+  connectivity_plus: ^6.0.2
 
 dev_dependencies:
   flutter_test:
