--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   json_annotation: ^4.5.0
   meta: ^1.7.0
   xml: ^6.1.0
+  connectivity_plus: ^6.0.2
 
 dev_dependencies:
   flutter_test:
